--- a/codes/LOAD_Solar.ipynb
+++ b/codes/LOAD_Solar.ipynb
@@ -204,7 +204,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "e56a0db2-0a88-435f-b25a-428535dd7b08",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
